Fixed edit room name input overlapping room key.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -2616,7 +2616,12 @@ room-members-sidebar-width = 200px
       text-decoration underline
 
   .edit-room-name, .edit-topic
-    width 70%
+    width 50%
+    margin 0
+
+  .save-room-name-button
+    margin-top 0
+    margin-bottom 0
 
   .room-name-info-container, .topic-container
     box-sizing border-box
